@@ -5,7 +5,7 @@
   <property name="geometry">
    <rect>
     <x>0</x>
-    <y>3</y>
+    <y>0</y>
     <width>691</width>
     <height>522</height>
    </rect>
@@ -32,6 +32,9 @@
    </property>
    <property name="topMargin">
     <number>6</number>
+   </property>
+   <property name="rightMargin">
+    <number>12</number>
    </property>
    <property name="bottomMargin">
     <number>6</number>
